--- a/dashboard.html
+++ b/dashboard.html
@@ -1401,7 +1401,7 @@
     /* ===== THEME SWITCHER ===== */
     .theme-switcher {
       position: fixed;
-      bottom: var(--space-6);
+      top: var(--space-4);
       right: var(--space-6);
       z-index: var(--z-sticky);
       background: var(--color-bg-elevated);
@@ -1531,8 +1531,8 @@
       }
       
       .theme-switcher {
-        bottom: var(--space-4);
-        right: var(--space-4);
+        top: var(--space-4);
+        right: var(--space-12);
       }
       
       .page-title {
