--- a/dashboard.html
+++ b/dashboard.html
@@ -1542,6 +1542,10 @@
       .page-description {
         font-size: var(--text-base);
       }
+
+      .header-actions {
+        display: none;
+      }
     }
 
     @media (min-width: 769px) and (max-width: 1023px) {
